--- a/flit.ini
+++ b/flit.ini
@@ -1,4 +1,5 @@
 [metadata]
+module=astcheck
 author=Thomas Kluyver
 author-email=thomas@kluyver.me.uk
 home-page=https://github.com/takluyver/astcheck
