--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
           pip install . pytest pytest-cov
 
       - name: Run tests
-        run: pytest --cov=astcheck
+        run: pytest --cov=astcheck --cov-report=xml
 
       - name: Upload coverage to codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
